2013-07-02  Simson Garfinkel  <simsong@Mucha.local>

	* configure.ac: removed defines we aren't using anymore

2013-06-27  Basic  <simsong@Mucha.local>

	* src/be13_api/feature_recorder.h (class feature_recorder): as a result of popular demand, the UTF8 BOM and BOM EXPLAINATION have been removed from the feature files

2013-06-26  Basic  <simsong@Mucha.local>

	* src/be13_api/feature_recorder_set.cpp (feature_recorder_set::get_name): get_name() now returns NULL if feature recorder does not exist.

	* src/be13_api/feature_recorder.h (class feature_recorder): added context_window_before() and context_window_after().

	* src/bulk_extractor.cpp (main): replaced context_window with context_window_default.

2013-06-21  Man Page  <simsong@mncrnpsedu.local>

	* src/be13_api/bulk_extractor_i.h (class scanner_params): made more variables const.
	(class recursion_control_block): removed returnAfterFound(raf); now implemented with exceptions

2013-06-19  Basic  <simsong@Mucha.local>

	* src/bulk_extractor.cpp (]): fixed handling of LIB_EXPAT
	(b): restart logic did not compile. Now it is fixed.

	* configure.ac: fixed bug in which expat.h was not being checked for. use AC_CHECK_HEADERS() instead of AC_CHECK_HEADER(), as AC_CHECK_HEADER() requires that you add additional logic and AC_CHECK_HEADERS() automatically adds HAVE_HEADER_H.

2013-06-18  Basic  <simsong@Mucha.local>

	* src/scan_zip.cpp (scan_zip): removed name_len (not needed)

2013-06-17  Basic  <simsong@mucha.lan>

	* src/pyxpress.h: removed 'extern' designation

	* src/image_process.h (i): removed extern size_t opt_pagesize and extern size_t opt_margin. These are now phase1 configuration variables that are passed into the image_iterator.

2013-06-15  Basic  <simsong@Mucha.local>

	* src/scan_email.flex (Host): removed ip_written and ip_tested (always remove dead code)

2013-06-08  Basic  <simsong@Mucha.local>
